--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -13,4 +13,6 @@
 </html>
 
 
-<%-#  -%>
+<%-# title page for account -%>
+<%-# links to css stylesheets -%>
+<%-# welcomes the current user using Helpers.rb method to display the username and account balance if user is logged in -%>
