--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -16,3 +16,4 @@
 <%-# title page for account -%>
 <%-# links to css stylesheets -%>
 <%-# welcomes the current user using Helpers.rb method to display the username and account balance if user is logged in -%>
+<%-# logout page -%>
