Automatically backed up by Learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -16,4 +16,5 @@
   </body>
 </html>
 
-<%-# title page for account -%>
+<%-# title, link to css stylesheets, welcome, log in, username/password -%>
+<%-# http post method form tag, input tag-%>
