Automatically backed up by Learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -17,4 +17,4 @@
 </html>
 
 <%-# title, link to css stylesheets, welcome, log in, username/password -%>
-<%-# http post method form tag, input tag-%>
+<%-# http post method form tag, input tag, submit button-%>
