--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -16,5 +16,6 @@
   </body>
 </html>
 
+<%-#this is the front page that you begin with -%>
 <%-# title, link to css stylesheets, welcome, log in, username/password -%>
 <%-# http post method form tag, input tag, submit button-%>
