Automatically backed up by Learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -19,3 +19,4 @@
 <%-#this is the front page that you begin with -%>
 <%-# title, link to css stylesheets, welcome, log in, username/password -%>
 <%-# http post method form tag, input tag, submit button-%>
+<%-# get form tag would be public info, post tags are for passwords -%>
