--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -20,4 +20,4 @@
 <%-# title, link to css stylesheets, welcome, log in, username/password -%>
 <%-# http post method form tag, input tag, submit button-%>
 <%-# get form tag would be public info, post tags are for passwords -%>
-<%-# form method tells the form what kind of request, form action tells what route the post request should be sent ot  -%>
+<%-# form method tells the form what kind of request, form action tells what route the post request should be sent to -%>
